--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 $orange: #FFA500;
 $dark-green: #9BCA3B;
-$green: #A3D667;
-$hero-green: rgb(163, 214, 103, 0.85);
+$green: #268d6f;
+$hero-green: rgb(38, 141, 111, 0.85);
 $hero-blue: rgb(58, 83, 164, 0.85);
-$bg-green: rgb(163, 214, 103, 0.5);
+$bg-green: rgb(38, 141, 111, 0.5);
 $sky-blue: #70CBD6;
 $blue: #3A53A4;
 $teal: #009093;
