--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,7 +33,7 @@ label {
 }
 
 .hero-text {
-    color: white;
+    color: #3A53A4;
     font-size: 20px;
     font-family: 'Lexend', 'Montserrat Alternates', Arial, sans-serif;
     z-index: 5;
