--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 $orange: #FFA500;
 $dark-green: #9BCA3B;
-$green: #268d6f;
-$hero-green: rgb(38, 141, 111, 0.85);
+$green: #9BCA3B;
+$hero-green: rgba(255, 255, 255, 0.85);
 $hero-blue: rgb(58, 83, 164, 0.85);
-$bg-green: rgb(38, 141, 111, 0.5);
+$bg-green:#70CBD6;
 $sky-blue: #70CBD6;
 $blue: #3A53A4;
 $teal: #009093;
