--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -38,7 +38,7 @@
     font-size: 12px;
     z-index: 5;
     background-color: v.$hero-green;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 10px;
 }
 
